<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <LinearLayout
        android:id="@+id/lTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"  >
        <TextView
            android:id="@+id/tituloApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_titulo"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/titulo"
            android:textStyle="bold"

            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginStart="@dimen/margin_left"
            android:textAlignment="center"/>

    </LinearLayout> //Titulo

    <LinearLayout
        android:id="@+id/llNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"  >
        <TextView
            android:id="@+id/tituloNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_nombre"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/nombre_contacto"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginStart="@dimen/margin_left"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/etNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/defaultNombre"
            android:importantForAutofill="no"
            android:inputType="textAutoComplete" />

    </LinearLayout> //Nombre

    <LinearLayout
        android:id="@+id/llFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tituloCalendario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginLeft="@dimen/margin_left"
            android:text="@string/t_canlendario"
            android:textSize="@dimen/nombre_contacto"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etFechaNac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/defaultFechaNac"
            android:importantForAutofill="no"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true"
            android:maxLines="1"
            />


    </LinearLayout> //Calendario

    <LinearLayout
        android:id="@+id/llTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"  >
        <TextView
            android:id="@+id/tituloTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_telefono"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/nombre_contacto"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginStart="@dimen/margin_left"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/defaultTelefono"
            android:importantForAutofill="no"
            android:inputType="phone" />

    </LinearLayout> // Telefono

    <LinearLayout
        android:id="@+id/llEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"  >
        <TextView
            android:id="@+id/tituloEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_email"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/nombre_contacto"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginStart="@dimen/margin_left"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/default_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"


            />

    </LinearLayout> //Email

    <LinearLayout
        android:id="@+id/llDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"  >
        <TextView
            android:id="@+id/tituloDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_descripcion"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/nombre_contacto"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginStart="@dimen/margin_left"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hola"
            android:importantForAutofill="no"
            android:inputType="textAutoComplete" />

    </LinearLayout>    //Descripción

    <LinearLayout
        android:id="@+id/llSiguiente"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingRight="@dimen/padding_button"
        android:paddingLeft="@dimen/padding_button"

        >

        <Button
            android:id="@+id/b_siguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee"
            android:text="@string/boton_descripcion"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="@dimen/boton_text"
            android:textStyle="bold"
            android:typeface="normal"
            app:backgroundTint="@color/b_siguiente"
            android:layout_gravity="center"
/>

    </LinearLayout>




</LinearLayout>