<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <LinearLayout
        android:id="@+id/lTitulo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"
        >
        <TextView
            android:id="@+id/tituloApp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_titulo2"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/titulo"
            android:textStyle="bold"

            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginStart="@dimen/margin_left"
            android:textAlignment="center"
            />

    </LinearLayout> //Titulo

    <LinearLayout
        android:id="@+id/llNombre2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"  >
        <TextView
            android:id="@+id/Nombre2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_nombre2"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/nombre_guardado"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginStart="@dimen/margin_left"
            android:textStyle="bold"/>


    </LinearLayout> //Nombre

    <LinearLayout
        android:id="@+id/llFecha2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tituloFechaNa2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginLeft="@dimen/margin_left"
            android:text="@string/t_canlendario"
            android:textSize="@dimen/nombre_contacto"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/FechaNa2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginLeft="@dimen/margin_left"
            android:text="@string/valor_fechanac"
            android:textSize="@dimen/nombre_contacto"/>


    </LinearLayout> //Calendario

    <LinearLayout
        android:id="@+id/llTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"  >
        <TextView
            android:id="@+id/tituloTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_telefono"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/nombre_contacto"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginStart="@dimen/margin_left"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/Telefono2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginLeft="@dimen/margin_left"
            android:text="@string/t_telefono2"
            android:textSize="@dimen/nombre_contacto"/>

    </LinearLayout> // Telefono

    <LinearLayout
        android:id="@+id/llEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"  >
        <TextView
            android:id="@+id/tituloEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_email"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/nombre_contacto"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginStart="@dimen/margin_left"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/Email2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/t_email2"
            android:importantForAutofill="no"
            android:textSize="@dimen/nombre_contacto"



            />

    </LinearLayout> //Email

    <LinearLayout
        android:id="@+id/llDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top"  >
        <TextView
            android:id="@+id/tituloDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_descripcion"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/nombre_contacto"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginStart="@dimen/margin_left"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/Descripcion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginLeft="@dimen/margin_left"
            android:text="@string/t_descripcion2"
            android:textSize="@dimen/nombre_contacto"
            android:maxLines="3"
            />

    </LinearLayout>    //Descripción

    <LinearLayout
        android:id="@+id/llEditarDatos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_editar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee"
            android:text="@string/boton_editar"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="@dimen/boton_text"
            android:textStyle="bold"
            android:typeface="normal"
            app:backgroundTint="@color/b_editar"
            android:layout_gravity="bottom"

            />

    </LinearLayout>




</LinearLayout>